@@ -12,18 +12,7 @@ import com.webkit640.ilog_core_backend.domain.model.CommonLog;
 public class LogMapper {
 
     public <T extends CommonLog> LogResponse.Detail toResponse(List<T> logs) {
-        List<LogResponse.Log> mappedLogs = logs.stream()
-                .map(this::convert)
-                .collect(Collectors.toList());
-
-        return new LogResponse.Detail(mappedLogs);
-    }
-
-    private <T extends CommonLog> LogResponse.Log convert(T log) {
-        return new LogResponse.Log(
-                log.getId(),
-                log.getCreatedAt(),
-                log.getStatus()
-        );
+        return new LogResponse.Detail(
+                logs.stream().map(CommonLog::toDto).toList());
     }
 }
